@@ -8,6 +8,8 @@ acct_mgr-0.5 (not yet released) - branch 0.11
  * #10740: Checkbox columns are too wide on the Accounts: Cleanup page
  * prevent two ways for a user to bypass a forced password change
  * skip BotTrapCheck on admin user requests, i.e. from inside user admin panel
+ * keep trac.auth.LoginModule options defined after disabling that component
+   by defining all options in acct_mgr.web_ui.LoginModule as well
 
  new features
  * #843: Make admin approval required for account registration
